# moodle_scraper

./: .env.example  .gitignore  ENV_README.md  LICENSE  README.md  activate_env.bat  config.py  debug_submissions.py  env_config.py  pyproject.toml  requirements.txt  scraper.py  scraper_hybrid.py  scraper_selenium.py  test_empty_report.md  test_report.md  test_scraper.py  utils.py  validate_skills.py
docs/: AGENT_SKILLS.md  ARCHITECTURE_VERIFICATION.md  ORQUESTACION_LANGGRAPH_LANGCHAIN.md  SOLID_AND_QUALITY.md
profiles/: blackboard_default.yml  canvas_default.yml  moodle_default.yml  moodle_unisimon.yml
src/lms_agent_scraper/: __init__.py  cli.py
src/lms_agent_scraper/agents/: __init__.py  analyzer_agent.py  course_discovery_agent.py  login_agent.py
src/lms_agent_scraper/config/: __init__.py  ollama_config.py  settings.py
src/lms_agent_scraper/core/: __init__.py  date_parser.py  profile_loader.py  skill_loader.py
src/lms_agent_scraper/graph/: __init__.py  nodes.py  state.py  workflow.py
src/lms_agent_scraper/llm/: __init__.py  ollama_client.py
src/lms_agent_scraper/mcp/: __init__.py  server.py
src/lms_agent_scraper/skills/: .gitkeep
src/lms_agent_scraper/skills/assignment-extractor/: SKILL.md
src/lms_agent_scraper/tools/: __init__.py  browser_tools.py  extraction_tools.py  report_tools.py
tests/: __init__.py  conftest.py  test_browser_tools.py  test_date_parser.py  test_extraction_tools.py  test_mcp.py  test_ollama_client.py  test_profile_loader.py  test_report_tools.py  test_skill_loader.py  test_workflow.py
(+7 files in other folders)
